[package]
name = "rummy_to_sat"
version = "0.1.0"
authors = ["neuring <neuring@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cadical = "0.1.13"
derive_more = "0.99.11"
itertools = "0.9.0"
strum = { version = "0.20.0", features = ["derive"] }
