[package]
name = "rummy_to_sat"
version = "0.1.0"
authors = ["neuring <neuring@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.36"
derive_more = "0.99.11"
itertools = "0.9.0"
nom = "6.0.1"
nom-supreme = "0.4.1"
structopt = "0.3.21"
strum = { version = "0.20.0", features = ["derive"] }
sat_encoder = { path = "../sat_encoder" }
